# vblock

./: COMPARE.md  Cargo.toml  DESIGN  README
src/: fs.rs  lib.rs  main.rs
tests/: store.rs
