[package]
name = "vblock"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
description = "Varible Length Block Store"

[dependencies]
hash-roll = { git = "https://github.com/jmesmon/hash-roll", version = "0.2" }
clap = "2"
rand = "0.3"
openat = "0.1"
hex = "0.2"
sodalite = "0.2"
byteorder = "1"
fmt-extra = "0.1"

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"
